force-app/main/default/objects/Min_Number_Manager__c/Min_Number_Manager__c.object-meta.xml
<CustomObject>
    <label>Min Number Manager</label>
    <nameField>
        <displayFormat>MNM-{0000000}</displayFormat>
        <label>Min Number Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Min Number Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>