force-app/main/default/objects/Min_Number_Manager__c/fields/Allocation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Allocation_In_Progress__c</fullName>
    <label>Allocation In Progress</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>