force-app/main/default/objects/Min_Number_Manager__c/fields/Allocation_Secured__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Secured__c</fullName>
    <label>Allocation Secured</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>