force-app/main/default/objects/Min_Number_Manager__c/fields/In_Progress_Order__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Order__c</fullName>
    <label>In Progress Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>