force-app/main/default/objects/Min_Number_Manager__c/fields/Min_Number_Met__c.field-meta.xml
<CustomField>
    <fullName>Min_Number_Met__c</fullName>
    <formula>IF(Minimum__c  &lt;= In_Progress_Order__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Number Met</label>
    <type>Checkbox</type>
</CustomField>